# django-valerie

./: .gitignore  Makefile  README.rst  requirements.in  requirements.txt  setup.cfg
site/: settings.py  urls.py
site/app/: __init__.py  admin.py  apps.py  models.py  settings.py
site/app/migrations/: 0001_initial.py
site/templates/: base.html
tests/: settings.py  test_admin.py  test_models.py  test_template_tags.py  urls.py  utils.py
